--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body{
 }
 
 .profile-page .btn-box{
-    margin-top: 1,2rem;
+    margin-top: 1.2rem;
 } 
 
 .btn{
@@ -169,6 +169,11 @@ body{
     position: absolute;
     right: 0;
     transform-style: preserve-3d;
+    transform-origin: left;
+
+}
+.book-page.page-right.turn{
+    transform: rotateY(-180deg);
 }
 
 .book-page .page-back,
@@ -179,6 +184,7 @@ body{
     width: 100%;
     height: 100%;
     background: var(--pages-color);
+    padding: 1.5rem 2rem;
 }
 
 .book-page .page-front{
@@ -187,4 +193,141 @@ body{
 
 .book-page .page-back{
     transform: rotateY(180deg) translateZ(1px);
+}
+
+.title{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.workeduc-box{
+    border-left: var(--border);
+}
+
+.workeduc-box .workeduc-content{
+    position: relative;
+    padding-left: 1.6rem;
+    margin-bottom: 1.2rem;
+}
+
+.workeduc-box .workeduc-content::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -0.65rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    background: var(--main-color);
+    border-radius: 50%;
+}
+.workeduc-content .year{
+    color: var(--main-color);
+}
+
+.workeduc-content .year i {
+    margin-right: .4rem;
+}
+
+.number-page{
+    position: absolute;
+    bottom: 1.2rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.nextprev-btn{
+    position: absolute;
+    bottom: .9rem;
+    right: 1.5rem;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    font-size: 2rem;
+    color: var(--second-text-color);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+}
+
+.nextprev-btn:hover{
+    color: var(--main-color);
+}
+
+.nextprev-btn.back{
+    left: 1.5rem;
+}
+
+.services-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.services-box .services-content{
+    flex: 1 1 10rem;
+    border: var(--border);
+    border-radius: .5rem;
+    padding: .8rem .5rem 1.1rem;
+    text-align: center;
+    transition: .3s ease;
+}
+
+.services-box .services-content:hover{
+    box-shadow: var(--box-shadow);
+}
+
+.services-content i{
+    font-size: 2.5rem;
+    color: var(--main-color);
+}
+
+.services-content p{
+    margin: .2rem 0 .8rem;
+}
+
+.services-content .btn{
+    width: 8rem;
+    height: 2.5rem;
+}
+
+.skills-box{
+    display: flex;
+    flex-wrap: wrap;
+}
+.skills-box .skills-content{
+    flex: 1 1 20 rem;
+}
+
+.skills-content h3{
+    font-size: 1.3rem;
+    line-height: 1;
+    margin-bottom: .6rem;
+}
+
+.skills-content .content{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .8rem;
+}
+
+.skills-content .content span{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 7rem;
+    height: 4rem;
+    border: var(--border);
+    border-radius: .3rem;
+    font-weight: 600;
+}
+.skills-content .content span img{
+    font-size: 2rem;
+    color: var(--main-color);
+    width: 20%; height: auto;
+}
+.skills-content .content span i{
+    font-size: 2rem;
+    color: var(--main-color);
 }
